# Semester-2

21/: readfile.sh
C/: .vimrc  a.out  main.c
C/List/: list.h
C/Queue/: a.hex  a.out  main.c  queue.c  queue.h  queuePrev.c
C/Vector/: a.out  main.c  vector.c  vector.h
C/Vector_template/: main.c  ultimate_vector.c  ultimate_vector.h  vector.c  vector.h
C/files/: .vimrc  a.out
Go/: Info.txt  main.go
Olimp/11/: .B.cpp.swp  A2.cpp  B.cpp  C.cpp  a.out  oldB.cpp
Olimp/13/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  lec.txt
Olimp/14/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
Olimp/15/: _a.cpp  a.cpp  a.out  b.cpp  text
Olimp/16/: a.cpp  a.out  b.cpp
Olimp/17/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp
labs/: Chisty_blank_lab.odt
labs/20/: .protocol.txt.swp  20.odt  commands.txt  protocol.txt
labs/21/: 1  21.odt  FizzBazz.sh  Makefile  Makefile1  Makefile2  arg.sh  read.sh  readfile.sh  script.sh
labs/22/: 22.odt  chapter18.tex  chapter19.tex  diff_index_tex.txt  index.tex
labs/23/: 23.odt  Makefile  a.out  debug.out  main.out
labs/24/: 24.odt  Dependences  Makefile  main  update.sh
labs/25/: 25.odt  CMakeLists.txt
labs/26/: 26.odt  Makefile
labs/CP6/: CMakeLists.txt  main.c
labs/CP6/data/: test1.csv  test3.csv
labs/CP6/report/: КП6.odt
labs/CP6/src/: avocado-converter.c  avocado-finder.c
labs/CP6/src/record/: record.c  record.h
labs/CP7/: Makefile  a.out  main.out  test.out  testing_program.sh  КП7.odt
labs/CP8/: Makefile  main  КП8.odt
srots/: TODO  a.out  main.c
(+97 files in other folders)
